# kafka_test

./: .gitignore  Dockerfile  LICENSE  README.md  check_kafka.py  docker-compose.yml  gui.py  kafka_manager.py  main.py  pyproject.toml  test_gui.py  test_minimal.py  test_simple.py  web_app.py
