[project]
name = "kafka-test-gui"
version = "0.1.0"
description = "A simple GUI application to test and visualize Kafka queue dynamics"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "aiokafka>=0.10.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.setuptools]
py-modules = ["kafka_manager", "gui", "main"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

